Fixed dark background in body in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   margin: 0 auto;
+  background-color: white;
 }
 
 a {
